v1.0.0
	- Initial version
v1.1.0
	- issue PROG-16
	- Add db logging in style class
	- style class cosmetic changes
	- move db changes logging from db class
	- remove main operations from _base_db
	- remove file operations from _base_db
	- remove getting current timestamp from function parameters
	- no need sync before exam
	- remove word operations from _base_db
	- join all getWords operations